# axum_todo_app

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
public/: app.js  index.html  styles.css
src/: app_err.rs  database.rs  json_response.rs  main.rs  rest.rs  routing.rs  todos.rs
